fix text cut off

--- a/src/components/home/why/why-in-demand/why-in-demand.module.scss
+++ b/src/components/home/why/why-in-demand/why-in-demand.module.scss
@@ -60,7 +60,7 @@
   }
 
   @media only screen and (max-width: 40rem) {
-    width: 50%;
+    width: 100%;
   }
 
   &--light-mode {
